--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "build": "npm run build"
+    "start": "npm run build",
+    "build": "npx vue-cli-service build"
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
