--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "scripts": {
-    "start": "npm run build",
-    "build": "npx vue-cli-service build"
+    "build": "npx vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "start": "npm run build"
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "vue": "^3.0.0-beta.1",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "^5.0.8",
-    "vue-template-compiler": "^2.7.16"
+    "@vue/compiler-sfc": "^3.0.0-beta.1",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "vue-cli-plugin-vue-next": "~0.1.4"
   }
 }
